@startuml parking

class Car{
    - Plate: str
}

class ClientCar{
    - entrada: datetime
    - salida: datetime
    + tiempo(): datetime
}

class WorkerCar

class Parking{
    - path: str
    - size: int
    - cars: list[Car]
    - workers: list[WorkerCar]
    - price: float
    + add(car:Car): none
    + del(car:Car): none
}

class Password{
    - filename: str
}
class User{
    + name:str
    + password:str
    + add(): none
}


class Verifier{
    +log_in(): boolean
    +is_free(): boolean
}


left to right direction
left to right direction
User "0..*" -- "1" Verifier: may corroborate <
Password <|-- User
Password <|-- Verifier

User "1" *-- "1" Parking: owns >
Parking "1" o-- "0..*" Car: has in >
Car <|-- ClientCar
Car <|-- WorkerCar



@enduml
